fix: refine mobile contact button alignment

--- a/css/style.css
+++ b/css/style.css
@@ -589,7 +589,6 @@ header {
   }
 
   h2 {
-    /* display: none;*/
     font-size: 2.5rem;
     text-align: center;
   }
@@ -664,6 +663,10 @@ header {
   .about-page-contents {
     font-size: 0.9rem;
     line-height: 27px;
+  }
+
+  .contact-btn {
+    padding: 20px 40px;
   }
 
   .contact-txt {
