--- a/css/works-detail.css
+++ b/css/works-detail.css
@@ -524,7 +524,7 @@ header {
   }
 
   .contact-btn {
-    width: 100%;
+    padding: 20px 40px;
   }
 
   .contact-txt {
